# vptrack

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt  vp_tracker.py
deploy/systemd/: vptrack-healthcheck.service.example  vptrack-healthcheck.timer.example  vptrack.service.example
minecraft-vp-calibrator/: README.md  build.gradle  gradle.properties  settings.gradle
minecraft-vp-calibrator/src/main/java/dev/vptrack/calibrator/: VpTrackCalibratorClient.java
minecraft-vp-calibrator/src/main/resources/: fabric.mod.json
scripts/: build_macos_app.py
tests/: test_vp_tracker.py
