[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vptrack"
version = "0.1.0"
description = "YveScanner local vote party tracker and short-join timing helper."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vp-track = "vp_tracker:main"

[tool.setuptools]
py-modules = ["vp_tracker"]
